--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Refresh" content="0; url='https://ubineeds.com'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>산지경매사 모의 프로그램</title>
     
