--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="Refresh" content="0; url='https://ubineeds.com'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>산지경매사 모의 프로그램</title>
     
@@ -35,7 +34,7 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">🌊</div>
-                <div class="title">한국해양수산연수원</div>
+                <div class="title">산지경매사 교육용 프로그램</div>
             </div>
             <div class="timer-display" id="timer">15</div>
             <div class="user-info" id="userInfo">응시번호: 1023</div>
