--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>산지경매사 모의 프로그램</title>
+    <title>산지경매사 교육용 프로그램</title>
     
     <!-- 외부 CSS 파일 -->
     <link rel="stylesheet" href="css/styles.css">
@@ -14,7 +14,7 @@
     <!-- 초기 설정 화면 -->
     <!-- ============================================= -->
     <div class="setup-container" id="setupScreen">
-        <h1>🐟 산지경매사 모의 프로그램</h1>
+        <h1>🐟 산지경매사 교육용 프로그램</h1>
         <div class="input-group">
             <label for="electronicCount">전자식 문제 수:</label>
             <input type="number" id="electronicCount" min="1" max="20" value="2">
